<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/history"
        android:enabled="true"
        android:icon="@drawable/brainstorm_icon"
        android:title="@string/history_text"/>
    <item
        android:id="@+id/brain_storm_create"
        android:enabled="true"
        android:icon="@drawable/add_brain_storm_icon"
        android:title="@string/create_text"
        />
    <item
        android:id="@+id/brain_storm_join"
        android:enabled="true"
        android:icon="@drawable/door_icon"
        android:title="@string/login_button_text"/>
    <item
        android:id="@+id/profile"
        android:enabled="true"
        android:icon="@drawable/user_icon"
        android:title="@string/profile_text"/>
</menu>