<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintWidth_percent="0.8"
        app:layout_constraintWidth_max="320dp">

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/textView"
            android:autoSizeMaxTextSize="25dp"
            android:autoSizeTextType="uniform"
            android:textColor="@color/beautiful_black"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:gravity="center"
            android:text="@string/join_brainstorm_text" />

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            style="?attr/textInputOutlinedStyle"
            android:layout_height="match_parent"
            android:layout_marginTop="10dp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/roomCodeEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textCapCharacters"
                android:hint="@string/room_code_text"
                android:maxLength="6"/>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/joinButton"
            style="@style/Widget.Material3.Button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/join_brainstorm_button_text"
            />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/closeButton"
            style="@style/Widget.Material3.Button"
            app:backgroundTint="@color/beautiful_red"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="15dp"
            android:text="@string/close_text"
            />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>