<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/beautiful_white"
    tools:context=".WaitingRoomCreatorActivity">

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/appNameTextView"
        android:layout_width="match_parent"
        android:textColor="@color/beautiful_black"
        android:layout_height="0dp"
        android:layout_marginTop="16dp"
        android:autoSizeMaxTextSize="30dp"
        android:autoSizeStepGranularity="2dp"
        android:autoSizeTextType="uniform"
        android:gravity="center|bottom"
        android:text="@string/app_name"
        tools:text="StormMaster · ABCDEF"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHeight_percent="0.05"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/participantsNumberTextView"
        android:layout_width="0dp"
        android:textColor="@color/beautiful_gray"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:textSize="17sp"
        android:gravity="center|bottom"
        android:text="@string/amount_of_participants_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/appNameTextView"
        app:layout_constraintWidth_percent="0.8"/>

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/participantsView"
        android:layout_width="0dp"
        android:textColor="@color/beautiful_gray"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:textSize="17sp"
        android:gravity="center|bottom"
        tools:text="user1, user2, user3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/participantsNumberTextView"
        app:layout_constraintWidth_percent="0.8"/>

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/themeInfoTextView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:gravity="center|bottom"
        android:text="@string/theme_info_text"
        android:textColor="@color/beautiful_black"
        android:textSize="17sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/participantsView"
        app:layout_constraintWidth_percent="0.8" />


    <com.google.android.material.card.MaterialCardView
        android:id="@+id/inputThemeCard"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_margin="8dp"
        app:cardCornerRadius="16dp"
        app:cardElevation="4dp"
        app:contentPadding="30dp"
        app:layout_constraintBottom_toTopOf="@+id/guideline"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.609"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/themeInfoTextView"
        app:layout_constraintWidth_percent="0.9"
        app:strokeWidth="2dp">

        <EditText
            android:id="@+id/themeEditText"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:inputType="textMultiLine"
            android:scrollHorizontally="false"
            android:scrollbars="vertical"
            android:gravity="top|start"
            android:background="@android:color/transparent"
            android:hint="@string/theme_edit_hint_text"
            android:autofillHints="" />

    </com.google.android.material.card.MaterialCardView>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.88"/>

    <LinearLayout
        android:id="@+id/buttonsLayout"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="5dp"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@id/inputThemeCard"
        app:layout_constraintStart_toStartOf="@id/inputThemeCard"
        app:layout_constraintTop_toBottomOf="@id/guideline"
        app:layout_constraintWidth_max="320dp"
        app:layout_constraintWidth_percent="0.8">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/startBrainstormButton"
            style="@style/Widget.Material3.Button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autoSizeMaxTextSize="20sp"
            android:autoSizeTextType="uniform"
            android:text="@string/start_brainstorm_button_text"
            app:layout_constraintBottom_toTopOf="@+id/deleteRoomButton"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintWidth_max="320dp"
            app:layout_constraintWidth_percent="0.8" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/deleteRoomButton"
            style="@style/Widget.Material3.Button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autoSizeMaxTextSize="20sp"
            android:autoSizeTextType="uniform"
            android:text="@string/delete_room_text"
            app:backgroundTint="@color/beautiful_red" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>


